fix(DatePicker): adjust datepicker popper class to have a higher z-index value (#978)

--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -1,6 +1,14 @@
 /* (c) Copyright Frontify Ltd., all rights reserved. */
 @import url('react-datepicker/dist/react-datepicker.min.css');
 
+.react-datepicker-popper {
+    /** 
+     *  The Modal default z-index is 50 (vide Modal.tsx file)
+     *  so it's better to place the DatePicker in a smaller z-index 
+     */
+    z-index: 49;
+}
+
 .react-datepicker-wrap {
     font-family: var(--body-family);
     border-radius: var(--radius);
